tests/ui/diagnostic_namespace/do_not_recommend/as_expression.next.stderr
error[E0277]: the trait bound `&str: AsExpression<<SelectInt as Expression>::SqlType>` is not satisfied
  --> $DIR/as_expression.rs:57:21
   |
LL |     SelectInt.check("bar");
   |               ----- ^^^^^ the trait `AsExpression<<SelectInt as Expression>::SqlType>` is not implemented for `&str`
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `AsExpression<Text>` is implemented for `&str`
note: required by a bound in `Foo::check`
  --> $DIR/as_expression.rs:48:12
   |
LL |     fn check<T>(&self, _: T) -> <T as AsExpression<<Self as Expression>::SqlType>>::Expression
   |        ----- required by a bound in this associated function
LL |     where
LL |         T: AsExpression<Self::SqlType>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::check`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
